--- a/乐格至效网站开发/legezhixiao/frontend/index.html
+++ b/乐格至效网站开发/legezhixiao/frontend/index.html
@@ -6,8 +6,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>乐格至效 AI小说创作平台</title>
-    <meta name="description" content="基于GitHub Copilot风格的智能小说创作助手" />
-    <meta name="keywords" content="AI,小说,写作,Copilot,智能创作" />
+    <meta name="description" content="基于Jasper AI风格的智能小说创作助手" />
+    <meta name="keywords" content="AI,小说,写作,Jasper,智能创作" />
 </head>
 
 <body>
